change descriptions - add import export doc

--- a/app/views/samples/index.html.erb
+++ b/app/views/samples/index.html.erb
@@ -24,7 +24,7 @@ vertical-align:top;
 <%end%>	
 
 <h2>Right Whale Sample Listing in 'Date Submitted' order for <%= current_user.to_s  %></h2>
-<h2>Click on Edit or Track for a Sample </h2>
+<h2>Click on EDIT or TRACK </h2>
 
 <table width="750" height="100" border="1" align="center" cellpadding = "1" >
   <tr height=20>
