--- a/app/views/account/login.rhtml
+++ b/app/views/account/login.rhtml
@@ -31,13 +31,15 @@ color:black;
 <tr><td  colheight=50% colspan=2>Welcome to the NRDPFC Right Whale Sample Submission/Tracking website.<br>
 Please logon in using the following boxes.<br>
 If you do not have a login yet, please click on "Create New Login" link below.<br>
-<b>For help please contact Meagan Moeyaert,  mmoeyaert@nrdpfc.ca</b></td></tr><tr>
+<b>For help please contact Meagan Moeyaert,  mmoeyaert@nrdpfc.ca<br>
+Click on Link below for information regarding the permits needed to send sample to NRDPFC<br></b>
 
 			<% form_tag do -%>
 				<tr><td  width = "20%" height = "30" ><label for="login">Login</label><td><%= text_field_tag 'login' %></td></tr>
 				<tr height = 50><td width=150><label for="password">Password</label></td><td><%= password_field_tag 'password' %></td></tr>
 				<tr height = 50><td colspan=2><%= submit_tag 'Log in' %></td><td></td></tr>
  				<tr><td width = 300 colspan=2><%= link_to "Create New Login", :controller => "/account", :action => "signup" %></td></tr>
+    			<tr><td colspan=2><a href="importexport.pdf">Importing and Exporting Samples for Scientific Research</a></td></tr>
 			<% end -%>
             </tr>
           </table>
