--- a/app/views/samples/new.html.erb
+++ b/app/views/samples/new.html.erb
@@ -50,15 +50,15 @@ text-align:left;
 	<tr><td  width="25%"><%= f.label :submitted_by %></td><td width = "35%" ><%= f.text_field :submitted_by %></td><td width = "40%" > Current user Logged in</td></tr>
 	<tr align=left><td><%= f.label :shipping_date %></td><td><%= f.calendar_date_select :shipping_date %></td><td>The date sample was shipped - click on calendar</td></tr>
 	<tr><td><%= f.label :date_submitted %></td><td><%= f.text_field :date_submitted,:value => f.object.date_submitted.strftime('%Y-%m-%d')  unless f.object.date_submitted.nil?  %></td><td>Default is today's date</td></tr>
-	<tr><td><%= f.label :field_code %></td><td><%= f.text_field :field_code %></td><td>For biopsy samples this will be the whale letter (e.g. A) For others, this will be the unique identifier for the relevant event (e.g. necropsy)  </td></tr>
+	<tr><td><%= f.label :field_code %></td><td><%= f.text_field :field_code %></td><td><%= FIELD_CODE_DESC %></td></tr>
 	<tr><td><%= f.label :organism_index, 'Necropsy Sample Number' %></td><td><%= f.text_field :organism_index %></td><td>For Necropsies only. This distiguishes multiple samples from the same individual (e.g. 1,2,3,4)<br>Please clearly label samples this way.</td></tr>
-	<tr><td><%= f.label :sample_bc, 'Sample Barcode' %></td><td><%= f.text_field :sample_bc %></td><td>Sample Bar Code if available</td></tr>
+	<tr><td><%= f.label :sample_bc, 'Sample Barcode' %></td><td><%= f.text_field :sample_bc %></td><td><%=SAMPLE_BC_DESC%></td></tr>
 	<tr><td><%= f.label :photo_id, 'Sighting ID' %></td><td><%= f.text_field :photo_id %></td><td>The unique sighting photo record number associated with this sample</td></tr>
-	<tr><td><%= f.label :field_indent, 'Field Identification (NEA)'%></td><td><%= f.text_field :field_ident %></td><td>The potential NEA # of the individual sampled</td></tr>
+	<tr><td><%= f.label :field_indent, 'Field Identification (NEA)'%></td><td><%= f.text_field :field_ident %></td><td><%=FIELD_INDENT_DESC%></td></tr>
 	<tr><td><%= f.label :collected_on_day %></td><td><%= f.collection_select(:collected_on_day , Sample::DD, :to_s, :to_s, {:include_blank => true, :prompt => true } , {"style" => "width:105px" } ) %></td><td>Choose Day from drop down list 1-31 or blank</tr>
 	<tr><td><%= f.label :collected_on_month %></td><td><%= f.collection_select(:collected_on_month , Sample::MM, :to_s, :to_s, {:include_blank => true, :prompt => true}, {"style" => "width:105px" } ) %></td><td>Choose Month from drop down list 1-12 or blank</td></tr>
 	<tr><td><%= f.label :collected_on_year %></td><td><%= f.collection_select(:collected_on_year , Sample::YY, :to_s, :to_s, {:include_blank => true, :prompt => true }, {"style" => "width:105px" } ) %></td><td>Choose Year from drop down list</td></tr>
-	<tr><td><%= f.label :organization_id %></td><td><%= f.collection_select( :organization_id, Organization.find(:all), :id, :org_name, {:include_blank => true, :prompt => true }, {"style" => "width:105px" }) %></td><td>The team who collected the sample</td></tr>
+	<tr><td><%= f.label :collected_by %></td><td><%= f.collection_select( :organization_id, Organization.find(:all), :id, :org_name, {:include_blank => true, :prompt => true }, {"style" => "width:105px" }) %></td><td>The team who collected the sample</td></tr>
 	<tr><td><%= f.label :text_tissue_type %></td><td><%= f.collection_select( :text_tissue_type , Sample::TT, :to_s, :to_s, {:include_blank => true, :prompt => true }, {"style" => "width:105px" } ) %></td><td>Choose Tissue type from drop down list</td></tr>
 	<tr><td><%= f.label :export_permit %></td><td><%= f.text_field :export_permit %></td><td>Export Permit</td></tr> 
 	<tr height="25"><td><%= f.label :import_permit %></td><td><%= f.text_field :import_permit %></td><td>Import Permit</td></tr> 
