--- a/app/views/samples/edit.html.erb
+++ b/app/views/samples/edit.html.erb
@@ -39,20 +39,20 @@ text-align:left;
 
 	<tr><td><%= f.label :shipping_date %></td><td><%= f.calendar_date_select :shipping_date %></td><td>The date sample was shipped</td></tr>
 	<tr><td><%= f.label :date_submitted %></td><td><%= f.text_field :date_submitted,:value => f.object.date_submitted.strftime('%Y-%m-%d') unless f.object.date_submitted.nil? %></td><td>Default is today's date</td></tr>
-	<tr><td><%= f.label :field_code %></td><td><%= f.text_field :field_code %></td><td>For biopsy samples this will be the whale letter (e.g. A) For others, this will be the unique identifier for the relevant event (e.g. necropsy)  </td></tr>
+	<tr><td><%= f.label :field_code %></td><td><%= f.text_field :field_code %></td><td><%=FIELD_CODE_DESC%></td></tr>
 	<tr><td><%= f.label :organism_index, 'Necropsy Sample Number' %></td><td><%= f.text_field :organism_index %></td><td>For Necropsies only</td></tr>
-	<tr><td><%= f.label :sample_bc, 'Sample Barcode' %></td><td><%= f.text_field :sample_bc %></td><td>Sample Barcode if available</td></tr>
+	<tr><td><%= f.label :sample_bc, 'Sample Barcode' %></td><td><%= f.text_field :sample_bc %></td><td><%=SAMPLE_BC_DESC%></td></tr>
 	<tr><td><%= f.label :photo_id, 'Sighting ID' %></td><td><%= f.text_field :photo_id %></td><td>The unique sighting photo record number associated with this sample</td></tr>
-	<tr><td><%= f.label :field_indent, 'Field Identification (NEA)'%></td><td><%= f.text_field :field_ident %></td><td>The potential NEA # of the individual sampled</td></tr>
+	<tr><td><%= f.label :field_indent, 'Field Identification (NEA)'%></td><td><%= f.text_field :field_ident %></td><td><%=FIELD_IDENT_DESC%></td></tr>
 	<tr><td><%= f.label :collected_on_day %></td><td><%= f.collection_select(:collected_on_day , Sample::DD, :to_s, :to_s, {:include_blank => true, :prompt => true } , {"style" => "width:100px" } ) %></td><td><%=DMY_DESC%></tr>
 	<tr><td><%= f.label :collected_on_month %></td><td><%= f.collection_select(:collected_on_month , Sample::MM, :to_s, :to_s, {:include_blank => true,  :prompt => true},{"style" => "width:100px" } ) %></td><td><%=DMY_DESC%></td></tr>
 	<tr><td><%= f.label :collected_on_year %></td><td><%= f.collection_select(:collected_on_year , Sample::YY, :to_s, :to_s, { :include_blank => true,  :prompt => true },{"style" => "width:100px" } ) %></td><td><%=DMY_DESC%></td></tr>
 	<tr><td><%= f.label :organization_id %></td><td><%= f.collection_select( :organization_id, Organization.find(:all), :id, :org_name,{ :include_blank => true,  :prompt => true }, {"style" => "width:100px" }) %></td><td><%=ORGANIZATION_DESC%></td></tr>
 	<tr><td><%= f.label :text_tissue_type %></td><td><%= f.collection_select( :text_tissue_type , Sample::TT, :to_s, :to_s, { :include_blank => true,  :prompt => true },{"style" => "width:100px" } ) %></td><td><%=TISSUE_TYPE_DESC%></td></tr>
-	<tr><td><%= f.label :export_permit %></td><td><%= f.text_field :export_permit %></td><td>Export Permit</td></tr> 
-	<tr><td><%= f.label :import_permit %></td><td><%= f.text_field :import_permit %></td><td>Import Permit</td></tr> 
-	<tr><td><%= f.label :current_location %></td><td><%= f.text_field :current_location %></td><td>The current location of the sample</td></tr>
-	<tr><td><%= f.label :comments %></td><td><%= f.text_field :comments %></td><td>Any other comments relevant to this sample</td></tr>
+	<tr><td><%= f.label :export_permit %></td><td><%= f.text_field :export_permit %></td><td><%=EXPORT_PERMIT_DESC%></td></tr> 
+	<tr><td><%= f.label :import_permit %></td><td><%= f.text_field :import_permit %></td><td><%=IMPORT_PERMIT_DESC%></td></tr> 
+	<tr><td><%= f.label :current_location %></td><td><%= f.text_field :current_location %></td><td><%=CURRENT_LOC_DESC%></td></tr>
+	<tr><td><%= f.label :comments %></td><td><%= f.text_field :comments %></td><td><%=COMMENTS_DESC%></td></tr>
 	<% @sample.text_tissue_type = params[:text_tissue_type] %>
 	<% @sample.collected_on_day = params[:collected_on_day] %>
 	<% @sample.collected_on_month = params[:collected_on_month] %>
