--- a/app/views/account/login.rhtml
+++ b/app/views/account/login.rhtml
@@ -38,14 +38,14 @@ Click on Link below for information regarding the permits needed to send sample 
 				<tr><td  width = "20%" height = "30" ><label for="login">Login</label><td><%= text_field_tag 'login' %></td></tr>
 				<tr height = 50><td width=150><label for="password">Password</label></td><td><%= password_field_tag 'password' %></td></tr>
 				<tr height = 50><td colspan=2><%= submit_tag 'Log in' %></td><td></td></tr>
- 				<tr><td width = 300 colspan=2><%= link_to "Create New Login", :controller => "/account", :action => "signup" %></td></tr>
-    			<tr><td colspan=2><a href="importexport.pdf">Importing and Exporting Samples for Scientific Research</a></td></tr>
-			<% end -%>
+ 				<tr><td width = 300 colspan=2><%= link_to "Create a New Login", :controller => "/account", :action => "signup" %></td></tr>
+				<tr><td width=300 colspan=2><%= link_to "Importing and Exporting Samples for Scientific Research", :controller => "/account", :action => "pdf" %></td></tr>
+			<% end %>
             </tr>
           </table>
 
          <p align="left">&nbsp;</p>
-          <p align="left">&nbsp;</p>
+         <p align="left">&nbsp;</p>
 			<tr>
               <td><div align="center">
               	<%= image_tag "dfo.jpg", :alt => "1", :width => "228", :height => "50", :border => "0" %>
@@ -63,6 +63,4 @@ Click on Link below for information regarding the permits needed to send sample 
 </table></td>
   </tr>
 </table>
-
-
 </html>
