--- a/app/views/samples/menu.html.erb
+++ b/app/views/samples/menu.html.erb
@@ -42,6 +42,7 @@ color:black;
 				<tr><td><%= link_to 'Edit and Track Sample', samples_path %></td><td>Click here to Track Samples or add information to a previously entered sample</td></tr>
 				<tr><td><%= link_to "Logout", :controller => "/account", :action => "logout" %></td><td>Exit the system</td></tr>
 				<tr><td><%= error_messages_for :user %></td></tr>
+				<tr><td colspan=2><a href="Checklist for Collecting Necropsy Samples for Genetic Profiling at Trent University.pdf">Checklist for Collecting Necropsy Samples for Genetic Profiling at Trent University</a></td></tr>
     			<tr><td colspan=2><a href="importexport.pdf">Importing and Exporting Samples for Scientific Research</a></td></tr>
          </table>
           <p align="left">&nbsp;</p>
