--- a/app/views/samples/new.html.erb
+++ b/app/views/samples/new.html.erb
@@ -58,7 +58,7 @@ text-align:left;
 	<tr><td><%= f.label :collected_on_day %></td><td><%= f.collection_select(:collected_on_day , Sample::DD, :to_s, :to_s, {:include_blank => true, :prompt => true } , {"style" => "width:105px" } ) %></td><td><%=DMY_DESC%></tr>
 	<tr><td><%= f.label :collected_on_month %></td><td><%= f.collection_select(:collected_on_month , Sample::MM, :to_s, :to_s, {:include_blank => true, :prompt => true}, {"style" => "width:105px" } ) %></td><td><%=DMY_DESC%></td></tr>
 	<tr><td><%= f.label :collected_on_year %></td><td><%= f.collection_select(:collected_on_year , Sample::YY, :to_s, :to_s, {:include_blank => true, :prompt => true }, {"style" => "width:105px" } ) %></td><td><%=DMY_DESC%></td></tr>
-	<tr><td><%= f.label :collected_by %></td><td><%= f.collection_select( :organization_id, Organization.find(:all), :id, :org_name, {:include_blank => true, :prompt => true }, {"style" => "width:105px" }) %></td><td><%=ORGANIZATION_DESC%></td></tr>
+	<tr><td><%= f.label :organization_id %></td><td><%= f.collection_select( :organization_id, Organization.find(:all), :id, :org_name, {:include_blank => true, :prompt => true }, {"style" => "width:105px" }) %></td><td><%=ORGANIZATION_DESC%></td></tr>
 	<tr><td><%= f.label :text_tissue_type %></td><td><%= f.collection_select( :text_tissue_type , Sample::TT, :to_s, :to_s, {:include_blank => true, :prompt => true }, {"style" => "width:105px" } ) %></td><td><%=TISSUE_TYPE_DESC%></td></tr>
 	<tr><td><%= f.label :export_permit %></td><td><%= f.text_field :export_permit %></td><td><%=EXPORT_PERMIT_DESC%></td></tr> 
 	<tr height="25"><td><%= f.label :import_permit %></td><td><%= f.text_field :import_permit %></td><td><%=IMPORT_PERMIT_DESC%></td></tr> 
@@ -69,6 +69,7 @@ text-align:left;
 	<%= f.hidden_field :user_id  %>
 	<%= f.hidden_field :remote_data_entry, {:value => true} %>
 
+	<% @sample.collected_by = params[:org_name] %>
 	<% @sample.text_tissue_type = params[:text_tissue_type] %>
 	<% @sample.collected_on_day = params[:collected_on_day] %>
 	<% @sample.collected_on_month = params[:collected_on_month] %>
